feat(edit-request): implement edit travel request endpoint
- setup test suite for edit travel request endpoint
- create a editTrip function in the RequestService class
- implements editTrip endpoint in the RequestController class
- add the route
- test with postman

[Finishes #167749972]
