# src/routes/requestRoute.js
@@ -4,9 +4,9 @@ import validation from '../middlewares/validation';
 import requestValidations from '../middlewares/requestValidations';
 import Auth from '../middlewares/Auth';
 
-const { userAuth } = Auth;
-const { bookTrip, userTripRequests, deleteTrip } = RequestController;
-const { validateTrip, validateTripRequest, validateDelete } = requestValidations;
+const { userAuth } = Auth;editTrip
+const { bookTrip, userTripRequests, deleteTrip, editTrip } = RequestController;
+const { validateTrip, validateTripRequest, validateDelete, validateOpenTrip } = requestValidations;
 
 const requestRoute = express.Router();
 
@@ -30,6 +30,15 @@ requestRoute.get(
   '/requests',
   Auth.userAuth,
   userTripRequests
+);
+
+requestRoute.patch(
+  '/requests/:id',
+  userAuth,
+  validation.validate('request'),
+  validateTrip,
+  validateOpenTrip,
+  editTrip
 );
 
 export default requestRoute;
